<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.hopper</groupId>
    <artifactId>hopper-presentation-engine</artifactId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>

  <artifactId>hopper-presentation-rest</artifactId>
  <packaging>war</packaging>

  <name>hopper-presentation-rest</name>
  <description>REST API for Hopper Presentation Engine — server-side SVG presentation delivery</description>
  <url>https://github.com/mattcasters/hopper-presentation-rest</url>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <hop.version>2.18.1</hop.version>
    <jandex.version>3.5.3</jandex.version>
    <jersey.version>3.1.9</jersey.version>
    <jetty.version>11.0.24</jetty.version>
    <jackson.version>2.18.2</jackson.version>
    <hopper.nexus.url>https://repository.data-hopper.com/repository/hopper/</hopper.nexus.url>
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.smallrye</groupId>
      <artifactId>jandex</artifactId>
      <version>${jandex.version}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.17.0</version>
    </dependency>

    <dependency>
      <groupId>jakarta.ws.rs</groupId>
      <artifactId>jakarta.ws.rs-api</artifactId>
      <version>3.1.0</version>
    </dependency>
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>5.0.0</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-servlet</artifactId>
      <version>${jersey.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.inject</groupId>
      <artifactId>jersey-hk2</artifactId>
      <version>${jersey.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-json-jackson</artifactId>
      <version>${jersey.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.core</groupId>
      <artifactId>jersey-common</artifactId>
      <version>${jersey.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.core</groupId>
      <artifactId>jersey-client</artifactId>
      <version>${jersey.version}</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.module</groupId>
      <artifactId>jackson-module-jakarta-xmlbind-annotations</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <!-- Jersey's Jackson provider still references the classic JAXB introspector -->
    <dependency>
      <groupId>com.fasterxml.jackson.module</groupId>
      <artifactId>jackson-module-jaxb-annotations</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-core</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-engine</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-databases-h2</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>2.2.224</version>
    </dependency>

    <!-- PostgreSQL: Hop DB type plugin + JDBC driver (packaged in WAR for connection tests) -->
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-databases-postgresql</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.7.11</version>
    </dependency>

    <dependency>
      <groupId>org.hopper</groupId>
      <artifactId>hopper-presentation-core</artifactId>
      <version>${project.version}</version>
    </dependency>
  </dependencies>

  <distributionManagement>
    <repository>
      <id>hopper</id>
      <name>Data Hopper releases</name>
      <url>${hopper.nexus.url}</url>
    </repository>
    <snapshotRepository>
      <id>hopper</id>
      <name>Data Hopper snapshots</name>
      <url>${hopper.nexus.url}</url>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>${maven.compiler.release}</release>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.4.0</version>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
      <plugin>
        <groupId>io.smallrye</groupId>
        <artifactId>jandex-maven-plugin</artifactId>
        <version>${jandex.version}</version>
        <executions>
          <execution>
            <id>make-index</id>
            <goals>
              <goal>jandex</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!--
        Run from this module, or from the parent with:
          mvn -pl hopper-presentation-rest -am jetty:run
        (the parent POM packaging is "pom" and does not declare Jetty, so plain
        "mvn jetty:run" at the repo root fails with "No plugin found for prefix jetty").
      -->
      <plugin>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-maven-plugin</artifactId>
        <version>${jetty.version}</version>
        <configuration>
          <httpConnector>
            <port>8080</port>
          </httpConnector>
          <webApp>
            <contextPath>/hopper/</contextPath>
          </webApp>
          <!-- Reload static resources while developing the canvas editor -->
          <scan>1</scan>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
